Agrego fotos en /galeria y saco las fotos repetidas

--- a/ph.html
+++ b/ph.html
@@ -111,64 +111,57 @@
         <div id="galeria">
             <div class="container content-lg">
                 <div class="row">
+
                     <div class="col-lg-4 margin-t-50 margin-b-50">
                         <h3 class="text-center">Fotos mundial 2022</h3>
                         <swiper-container class="mySwiper" effect="cards" grab-cursor="true">
                             <swiper-slide> << Desliza</swiper-slide>
-                            <swiper-slide><img class="logo-img" src="img/instagram/01.webp" alt="imagen1" width="105%"></swiper-slide>
-                            <swiper-slide><img class="logo-img" src="img/instagram/02.webp" alt="imagen2" width="105%"></swiper-slide>
-                            <swiper-slide><img class="logo-img" src="img/instagram/03.webp" alt="imagen3" width="105%"></swiper-slide>
-                            <swiper-slide><img class="logo-img" src="img/instagram/04.webp" alt="imagen4" width="105%"></swiper-slide>
+                            <swiper-slide><img class="logo-img" src="img/galeria/2022mundial/1.webp" alt="imagen" width="105%"></swiper-slide>
+                            <swiper-slide><img class="logo-img" src="img/galeria/2022mundial/2.webp" alt="imagen" width="105%"></swiper-slide>
+                            <swiper-slide><img class="logo-img" src="img/galeria/2022mundial/3.webp" alt="imagen" width="105%"></swiper-slide>
+                            <swiper-slide><img class="logo-img" src="img/galeria/2022mundial/4.webp" alt="imagen" width="105%"></swiper-slide>
                         </swiper-container>
                     </div>
+                    
                     <div class="col-lg-4 margin-t-50 margin-b-50">
-                        <h3 class="text-center">Fotos mundial 2022</h3>
+                        <h3 class="text-center">Mar del Plata 2022</h3>
                         <swiper-container class="mySwiper" effect="cards" grab-cursor="true">
-                            <swiper-slide><img class="logo-img" src="img/instagram/02.webp" alt="imagen1" width="105%"></swiper-slide>
-                            <swiper-slide><img class="logo-img" src="img/instagram/01.webp" alt="imagen2" width="105%"></swiper-slide>
-                            <swiper-slide><img class="logo-img" src="img/instagram/03.webp" alt="imagen3" width="105%"></swiper-slide>
-                            <swiper-slide><img class="logo-img" src="img/instagram/04.webp" alt="imagen4" width="105%"></swiper-slide>
+                            <swiper-slide><img class="logo-img" src="img/galeria/2022mdq/1.jpg" alt="imagen" width="150%"></swiper-slide>
+                            <swiper-slide><img class="logo-img" src="img/galeria/2022mdq/2.jpg" alt="imagen" width="105%"></swiper-slide>
                         </swiper-container>
                     </div>
+
                     <div class="col-lg-4 margin-t-50 margin-b-50">
-                        <h3 class="text-center">Fotos mundial 2022</h3>
+                        <h3 class="text-center">Chile 2019</h3>
                         <swiper-container class="mySwiper" effect="cards" grab-cursor="true">
-                            <swiper-slide><img class="logo-img" src="img/instagram/03.webp" alt="imagen1" width="105%"></swiper-slide>
-                            <swiper-slide><img class="logo-img" src="img/instagram/02.webp" alt="imagen2" width="105%"></swiper-slide>
-                            <swiper-slide><img class="logo-img" src="img/instagram/01.webp" alt="imagen3" width="105%"></swiper-slide>
-                            <swiper-slide><img class="logo-img" src="img/instagram/04.webp" alt="imagen4" width="105%"></swiper-slide>
+                            <swiper-slide><img class="logo-img" src="img/galeria/2019chile/1.jpg" alt="imagen" width="150%"></swiper-slide>
+                            <swiper-slide><img class="logo-img" src="img/galeria/2019chile/2.jpg" alt="imagen" width="150%"></swiper-slide>
+                            <swiper-slide><img class="logo-img" src="img/galeria/2019chile/3.jpg" alt="imagen" width="150%"></swiper-slide>
+                            <swiper-slide><img class="logo-img" src="img/galeria/2019chile/4.jpg" alt="imagen" width="150%"></swiper-slide>
                         </swiper-container>
                     </div>
-                </div>
-                <div class="row">
+
                     <div class="col-lg-4 margin-t-50 margin-b-50">
-                        <h3 class="text-center">Fotos mundial 2022</h3>
+                        <h3 class="text-center">Brasil 2018</h3>
                         <swiper-container class="mySwiper" effect="cards" grab-cursor="true">
-                            <swiper-slide> << Desliza</swiper-slide>
-                            <swiper-slide><img class="logo-img" src="img/instagram/01.webp" alt="imagen1" width="105%"></swiper-slide>
-                            <swiper-slide><img class="logo-img" src="img/instagram/02.webp" alt="imagen2" width="105%"></swiper-slide>
-                            <swiper-slide><img class="logo-img" src="img/instagram/03.webp" alt="imagen3" width="105%"></swiper-slide>
-                            <swiper-slide><img class="logo-img" src="img/instagram/04.webp" alt="imagen4" width="105%"></swiper-slide>
+                            <swiper-slide><img class="logo-img" src="img/galeria/2018brasil/1.jpg" alt="imagen" width="150%"></swiper-slide>
+                            <swiper-slide><img class="logo-img" src="img/galeria/2018brasil/2.jpg" alt="imagen" width="150%"></swiper-slide>
+                            <swiper-slide><img class="logo-img" src="img/galeria/2018brasil/3.jpg" alt="imagen" width="150%"></swiper-slide>
+                            <swiper-slide><img class="logo-img" src="img/galeria/2018brasil/4.jpg" alt="imagen" width="150%"></swiper-slide>
+                            <swiper-slide><img class="logo-img" src="img/galeria/2018brasil/5.jpg" alt="imagen" width="150%"></swiper-slide>
+                            <swiper-slide><img class="logo-img" src="img/galeria/2018brasil/6.jpg" alt="imagen" width="150%"></swiper-slide>
+                            <swiper-slide><img class="logo-img" src="img/galeria/2018brasil/7.jpg" alt="imagen" width="150%"></swiper-slide>
                         </swiper-container>
                     </div>
+
                     <div class="col-lg-4 margin-t-50 margin-b-50">
-                        <h3 class="text-center">Fotos mundial 2022</h3>
+                        <h3 class="text-center">Uruguay 2018</h3>
                         <swiper-container class="mySwiper" effect="cards" grab-cursor="true">
-                            <swiper-slide><img class="logo-img" src="img/instagram/02.webp" alt="imagen1" width="105%"></swiper-slide>
-                            <swiper-slide><img class="logo-img" src="img/instagram/01.webp" alt="imagen2" width="105%"></swiper-slide>
-                            <swiper-slide><img class="logo-img" src="img/instagram/03.webp" alt="imagen3" width="105%"></swiper-slide>
-                            <swiper-slide><img class="logo-img" src="img/instagram/04.webp" alt="imagen4" width="105%"></swiper-slide>
+                            <swiper-slide><img class="logo-img" src="img/galeria/2018uruguay/1.jpg" alt="imagen" width="150%"></swiper-slide>
+                            <swiper-slide><img class="logo-img" src="img/galeria/2018uruguay/2.jpg" alt="imagen" width="150%"></swiper-slide>
                         </swiper-container>
                     </div>
-                    <div class="col-lg-4 margin-t-50 margin-b-50">
-                        <h3 class="text-center">Fotos mundial 2022</h3>
-                        <swiper-container class="mySwiper" effect="cards" grab-cursor="true">
-                            <swiper-slide><img class="logo-img" src="img/instagram/03.webp" alt="imagen1" width="105%"></swiper-slide>
-                            <swiper-slide><img class="logo-img" src="img/instagram/02.webp" alt="imagen2" width="105%"></swiper-slide>
-                            <swiper-slide><img class="logo-img" src="img/instagram/01.webp" alt="imagen3" width="105%"></swiper-slide>
-                            <swiper-slide><img class="logo-img" src="img/instagram/04.webp" alt="imagen4" width="105%"></swiper-slide>
-                        </swiper-container>
-                    </div>
+
                 </div>
                 
             </div>
