Agrego seccion a fotografia: /viajes2 cambiandole el nombre a /viajes

--- a/ph.html
+++ b/ph.html
@@ -60,6 +60,7 @@
                         <div class="menu-container">
                             <ul class="nav navbar-nav navbar-nav-right">
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#galeria">Galería</a></li>
+                                <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="/viajes">Viajes</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="/equipo">Mi equipo</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="/">Más</a></li>
 
