--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#about">Sobre mi</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#contact">Contacto</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="/ph">Fotografía</a></li>
+                                <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="/libros">Libros</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="/cv">CV</a></li>
 
                                 <!--<li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#work">Proyectos</a></li>
