Cambios chicos de links en algunas paginas

--- a/ph.html
+++ b/ph.html
@@ -92,8 +92,9 @@
                         </p>
                         <p>
                             Esta pasión inició al ver los recuerdos capturados por mi abuelo durante su viaje en barco por todo América. Pero esa es historia para otro día... 
-                            <br>
-                            Porque acá vas a encontrar mis recuerdos
+                        </p>
+                        <p>
+                            Acá vas a encontrar mis recuerdos.
                         </p>
                     </div>
 
@@ -178,27 +179,19 @@
                 <div class="container content-lg">
                     <div class="row margin-b-40">
                         <div class="col-sm-6">
-                           <h2>Contacto</h2>
+                           <h2>Más fotos en Instagram:</h2>
                         </div>
                     </div>
                     <!--// end row -->
 
                     <div class="row">
-                        <div class="col-md-3 col-xs-6 md-margin-b-30">
-                            <h4>WhatsApp</h4>
-                            <a href="https://wa.me/+5491122923987/">+54 9 11-2292-3987 - [Enviar]</a>
-                        </div>
-                        <div class="col-md-3 col-xs-6 md-margin-b-30">
-                            <h4>Correo Electrónico</h4>
-                            <a href="mailto:lucashermannit@gmail.com">Lucas Hermann IT - [Enviar]</a>
+                        <div class="col-md-3 col-xs-6">
+                            <h4>Mis viajes</h4>
+                            <a href="https://www.instagram.com/lucashermannph/">Lucas Hermann PH</a>
                         </div>
                         <div class="col-md-3 col-xs-6">
-                            <h4>Instagram</h4>
-                            <a href="https://www.instagram.com/lucashermannph/">Lucas Hermann PH - [Visitar]</a>
-                        </div>
-                        <div class="col-md-3 col-xs-6">
-                            <h4>Linkedin</h4>
-                            <a href="https://www.linkedin.com/in/lucashermannit/">Lucas Hermann - [Visitar]</a>
+                            <h4>Retratos</h4>
+                            <a href="https://www.instagram.com/loquemehacefeliz.ig/">Lo que me hace Feliz</a>
                         </div>
                     </div>
 
@@ -234,9 +227,9 @@
                     <div class="col-xs-6">
                         <img class="footer-logo" src="" alt="">
                     </div>
-                    <div class="col-xs-6 text-right sm-text-left">
+                    <!--<div class="col-xs-6 text-right sm-text-left">
                         <p class="margin-b-0"><a class="fweight-700" href="https://www.linkedin.com/in/lucashermannit/">Ver en Linkedin</a>  <a class="fweight-700"</a></p>
-                    </div>
+                    </div>-->
                 </div>
                 <!--// end row -->
             </div>
