Cambios de links y nav

--- a/equipo.html
+++ b/equipo.html
@@ -345,9 +345,9 @@
                     <div class="col-xs-6">
                         <img class="footer-logo" src="" alt="">
                     </div>
-                    <div class="col-xs-6 text-right sm-text-left">
+                    <!--<div class="col-xs-6 text-right sm-text-left">
                         <p class="margin-b-0"><a class="fweight-700" href="/ph">Volver</a>  <a class="fweight-700"</a></p>
-                    </div>
+                    </div>-->
                 </div>
                 <!--// end row -->
             </div>
