--- a/viajes.html
+++ b/viajes.html
@@ -69,6 +69,7 @@
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#chile">Chile</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#paraguay">Paraguay</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#uruguay">Uruguay</a></li>
+                                <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="/ph">Fotografía</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="/">Más</a></li>
 
                                 <!--<li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#work">Proyectos</a></li>
@@ -722,70 +723,21 @@ DEMO
         <!-- ACA -->
         <!-- Contacto -->
         <div id="contact">
-            <!-- <div class="bg-color-sky-light"> --> 
-            <div class="bg-color-sky-light">
-                <div class="container content-lg">
-                    <div class="row margin-b-40">
-                        <div class="col-sm-6">
-                           <h2>Contacto</h2>
-                        </div>
-                    </div>
-                    <!--// end row -->
-
-                    <div class="row">
-                        <div class="col-md-3 col-xs-6 md-margin-b-30">
-                            <h4>WhatsApp</h4>
-                            <a href="https://wa.me/+5491122923987/">+54 9 11-2292-3987 - [Enviar]</a>
-                        </div>
-                        <div class="col-md-3 col-xs-6 md-margin-b-30">
-                            <h4>Correo Electrónico</h4>
-                            <a href="mailto:lucashermannit@gmail.com">Lucas Hermann IT - [Enviar]</a>
-                        </div>
-                        <div class="col-md-3 col-xs-6">
-                            <h4>Instagram</h4>
-                            <a href="https://www.instagram.com/lucashermannph/">Lucas Hermann PH - [Visitar]</a>
-                        </div>
-                        <div class="col-md-3 col-xs-6">
-                            <h4>Linkedin</h4>
-                            <a href="https://www.linkedin.com/in/lucashermannit/">Lucas Hermann - [Visitar]</a>
-                        </div>
-                    </div>
-
-                    <!--<div class="row">
-                        <div class="col-md-3 col-xs-6 md-margin-b-30">
-                            <h4>Correo Electrónico</h4>
-                            <a href="mailto:#">lucashermannit@gmail.com</a>
-                        </div>
-                        <div class="col-md-3 col-xs-6 md-margin-b-30">
-                            <h4>Ubicación</h4>
-                            <a href="https://www.google.com/maps/place/Buenos+Aires,+CABA/@-34.5580717,-58.6834405,9.75z/data=!4m5!3m4!1s0x95bcca3b4ef90cbd:0xa0b3812e88e88e87!8m2!3d-34.6036844!4d-58.3815591">Capital Federal, Bs. As., Argentina</a>
-                        </div>
-                        <div class="col-md-3 col-xs-6">
-                            <h4>Teléfono</h4>
-                            <a href="#">+5411 xxxx xxxx</a>
-                        </div>
-                        <div class="col-md-3 col-xs-6">
-                            <h4>Perfil de Linkedin</h4>
-                            <a href="https://www.linkedin.com/in/lucashermannit/">Lucas Hermann</a>
-                        </div>
-                    </div>-->
-                    <!--// end row -->
-                </div>
-            </div>
+            
         </div>
         <!-- End Contact -->
         <!--========== END PAGE LAYOUT ==========-->
 
         <!--========== FOOTER ==========-->
-        <footer class="footer">
+        <footer class="footer bg-color-sky-light">
             <div class="content container">
                 <div class="row">
                     <div class="col-xs-6">
                         <img class="footer-logo" src="" alt="">
                     </div>
-                    <div class="col-xs-6 text-right sm-text-left">
+                    <!--<div class="col-xs-6 text-right sm-text-left">
                         <p class="margin-b-0"><a class="fweight-700" href="https://www.linkedin.com/in/lucashermannit/">Ver en Linkedin</a>  <a class="fweight-700"</a></p>
-                    </div>
+                    </div>-->
                 </div>
                 <!--// end row -->
             </div>
