Agrego mapa y cambio nav /viajes

--- a/viajes.html
+++ b/viajes.html
@@ -63,7 +63,7 @@
                     <div class="collapse navbar-collapse nav-collapse">
                         <div class="menu-container">
                             <ul class="nav navbar-nav navbar-nav-right">
-                                <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#viajes">Viajes</a></li>
+                                <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#mapas">Mapas</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#argentina">Argentina</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#brasil">Brasil</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#chile">Chile</a></li>
@@ -351,8 +351,21 @@ DEMO
 
 </style>
 
+        <!-- Mapa -->
+        <div id="mapas">
+            <div class="container content-lg">
+                <div class="row">
+                    <div class="col-sm-12">
+                        <swiper-slide><img class="logo-img" src="img/viajes/mapa.webp" alt="imagen1" width="105%"></swiper-slide>
+                    </div>
+                </div>
+                <!--// end row -->
+            </div>
+        </div>
+        <!-- End About -->
+
         <div id="viajes">
-            <div class="bg-white" data-auto-height="true">
+            <div class="bg-color-sky-light" data-auto-height="true">
                 <div class="container">
                     <div class="row">
                         <div class="viaje-estudio">
@@ -729,7 +742,7 @@ DEMO
         <!--========== END PAGE LAYOUT ==========-->
 
         <!--========== FOOTER ==========-->
-        <footer class="footer bg-color-sky-light">
+        <footer class="footer">
             <div class="content container">
                 <div class="row">
                     <div class="col-xs-6">
