Pongo mapas y saco <style> de /viajes para moverlo a layout.CSS

--- a/equipo.html
+++ b/equipo.html
@@ -85,7 +85,7 @@
                         </p>
                         <p>
                             Acá vas a encontrar el equipo que fui adquiriendo a lo largo de los años, el equipo que uso para salir a fotear, grabar y hasta editar.
-                            Espero que te sirva a modo de guía y pueda satisfacer esa curiosidad da saber que hay dentro de la mochila de un fotógrafo.
+                            Espero que te sirva a modo de guía y pueda satisfacer esa curiosidad de saber que hay dentro de la mochila de un fotógrafo.
                         </p>
                     </div>
 
