--- a/viajes.html
+++ b/viajes.html
@@ -113,256 +113,38 @@
         </div>
 
 
-<!--========== test ==========-->
-<style>
-    /*
-!!!!
-This pen is being refactored
-!!!!
-*/
 
-/*
-=====
-DEPENDENCES
-=====
-*/
-
-.r-title{
-  margin-top: var(--rTitleMarginTop, 0) !important;
-  margin-bottom: var(--rTitleMarginBottom, 0) !important;
-}
-
-
-p:not([class]){
-  line-height: var(--cssTypographyLineHeight, 1.78);
-  margin-top: var(--cssTypographyBasicMargin, 1em);
-  margin-bottom: 0;
-}
-
-p:not([class]):first-child{
-  margin-top: 0;
-}
-
-/*
-text component
-*/
-
-.text{
-  display: var(--textDisplay, inline-flex);
-  font-size: var(--textFontSize, 1rem);  
-}
-
-/*
-time component
-*/
-
-/*
-core styles
-*/
-
-.time{
-  display: var(--timeDisplay, inline-flex);
-}
-
-/*
-extensions
-*/
-
-.time__month{
-  margin-left: var(--timelineMounthMarginLeft, .25rem);
-}
-
-/*
-skin
-*/
-
-.time{
-  padding: var(--timePadding, .25rem 1.25rem .25rem);
-  background-color: var(--timeBackgroundColor, #71ABDD);
-  font-size: var(--timeFontSize, 1.25rem);
-  font-weight: var(--timeFontWeight, 700);
-  text-transform: var(--timeTextTransform, uppercase);
-  color: var(--timeColor, currentColor);
-}
-
-/*
-card component
-*/
-
-/*
-core styles
-*/
-
-.card{
-  padding: var(--timelineCardPadding, 1.5rem 1.5rem 1.25rem);
-}
-
-.card__content{
-  margin-top: var(--cardContentMarginTop, .5rem);
-}
-
-/*
-skin
-*/
-
-.card{
-  border-radius: var(--timelineCardBorderRadius, 10px);
-  border: var(--timelineCardBorderLeftWidth, 3px) solid var(--timelineCardBorderLeftColor, var(--uiTimelineMainColor));
-  
-  box-shadow: var(--timelineCardBoxShadow, 0 1px 3px 0 rgba(0, 0, 0, .12), 0 1px 2px 0 rgba(0, 0, 0, .24));
-  background-color: var(--timelineCardBackgroundColor, #fff);
-}
-
-/*
-extensions
-*/
-
-.card__title{
-  --rTitleMarginTop: var(--cardTitleMarginTop, 1rem);
-  font-size: var(--cardTitleFontSize, 1.25rem);
-}
-
-/*
-=====
-CORE STYLES
-=====
-*/
-
-.timeline{
-  display: var(--timelineDisplay, grid);
-  grid-row-gap: var(--timelineGroupsGap, 2rem);
-}
-
-/*
-1. If timeline__year isn't displaed the gap between it and timeline__cards isn't displayed too
-*/
-
-.timeline__year{
-  margin-bottom: 1.25rem; /* 1 */
-}
-
-.timeline__cards{
-  display: var(--timeloneCardsDisplay, grid);
-  grid-row-gap: var(--timeloneCardsGap, 1.5rem);
-}
-
-
-/*
-=====
-SKIN
-=====
-*/
-
-.timeline{
-  --uiTimelineMainColor: var(--timelineMainColor, #222);
-  --uiTimelineSecondaryColor: var(--timelineSecondaryColor, #fff);
-
-  border-left: var(--timelineLineWidth, 5px) solid var(--timelineLineBackgroundColor, var(--uiTimelineMainColor));
-  padding-top: 1rem;
-  padding-bottom: 1.5rem;
-}
-
-.timeline__year{
-  --timePadding: var(--timelineYearPadding, .5rem 1.5rem);
-  --timeColor: var(--uiTimelineSecondaryColor);
-  --timeBackgroundColor: var(--uiTimelineMainColor);
-  --timeFontWeight: var(--timelineYearFontWeight, 400);
-}
-
-.timeline__card{
-  position: relative;
-  margin-left: var(--timelineCardLineGap, 1.25rem);
-}
-
-/*
-1. Stoping cut box shadow
-*/
-
-.timeline__cards{
-  overflow: hidden;
-  padding-top: .25rem; /* 1 */
-  padding-bottom: .25rem; /* 1 */
-}
-
-.timeline__card::before{
-  content: "";
-  width: 100%;
-  height: var(--timelineCardLineWidth, 8px);
-  background-color: var(--timelineCardLineBackgroundColor, var(--uiTimelineMainColor));
-
-  position: absolute;
-  top: var(--timelineCardLineTop, 4%);
-  left: -50%;
-  z-index: -1;
-}
-
-/*
-=====
-SETTINGS
-=====
-*/
-/**/
-.timeline{
-  --timelineMainColor: #71ABDD;
-}
-
-/*
-=====
-DEMO
-=====
-*/
-
-
-
-.substack{
-  border:1px solid #EEE; 
-  background-color: #fff;
-  width: 100%;
-  max-width: 480px;
-  height: 280px;
-  margin: 1rem auto;;
-}
-
-
-.linktr{
-  display: flex;
-  justify-content: flex-end;
-  padding: 2rem;
-  text-align: center;
-}
-
-.linktr__goal{
-  background-color: rgb(209, 246, 255);
-  color: rgb(8, 49, 112);
-  box-shadow: rgb(8 49 112 / 24%) 0px 2px 8px 0px;
-  border-radius: 2rem;
-  padding: .75rem 1.5rem;
-}
-
-.r-link{
-    --uirLinkDisplay: var(--rLinkDisplay, inline-flex);
-    --uirLinkTextColor: var(--rLinkTextColor);
-    --uirLinkTextDecoration: var(--rLinkTextDecoration, none);
-
-    display: var(--uirLinkDisplay) !important;
-    color: var(--uirLinkTextColor) !important;
-    text-decoration: var(--uirLinkTextDecoration) !important;
-}
-
-</style>
-
-        <!-- Mapa -->
+        <!-- MAPA -->
         <div id="mapas">
             <div class="container content-lg">
                 <div class="row">
-                    <div class="col-sm-12">
-                        <swiper-slide><img class="logo-img" src="img/viajes/mapa.webp" alt="imagen1" width="105%"></swiper-slide>
+                    <div class="col-md-4 text-center margin-t-50 margin-b-50">
+                        <h3>ARGENTINA</h3>
+                        <img class="mx-auto d-block" src="img/viajes/mapas/ar.jpg" alt="imagen1" height="400">
+                    </div>
+                    <div class="col-md-4 text-center margin-t-50 margin-b-50">
+                        <h3>BRASIL</h3>
+                        <img class="mx-auto d-block" src="img/viajes/mapas/br.jpg" alt="imagen1" height="400">
+                    </div>
+                    <div class="col-md-4 text-center margin-t-50 margin-b-50">
+                        <h3>CHILE</h3>
+                        <img class="mx-auto d-block" src="img/viajes/mapas/cl.jpg" alt="imagen1" height="400">
                     </div>
                 </div>
-                <!--// end row -->
+                <div class="row">
+                    <div class="col-md-4 text-center margin-t-50 margin-b-50">
+                        <h3>PARAGUAY</h3>
+                        <img class="mx-auto d-block" src="img/viajes/mapas/py.jpg" alt="imagen1" height="300">
+                    </div>
+                    <div class="col-md-4 text-center margin-t-50 margin-b-50">
+                        <h3>URUGUAY</h3>
+                        <img class="mx-auto d-block" src="img/viajes/mapas/uy.png" alt="imagen1" height="300">
+                    </div>
+                </div>
+
             </div>
         </div>
-        <!-- End About -->
+        <!-- End MAPA -->
 
         <div id="viajes">
             <div class="bg-color-sky-light" data-auto-height="true">
