Agrego pagina /club . Para armar el club de emprendedores

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#about">Sobre mi</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#contact">Contacto</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="/ph">Fotografía</a></li>
+                                <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="/club">Club</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="/libros">Libros</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="/cv">CV</a></li>
 
@@ -350,26 +351,26 @@ End Experience -->
                     <div class="row margin-b-40">
                         <div class="col-sm-6">
                            <h2>Contacto</h2>
-                        </div>
+                        </div> 
                     </div>
                     <!--// end row -->
 
                     <div class="row">
                         <div class="col-md-3 col-xs-6 md-margin-b-30">
                             <h4>WhatsApp</h4>
-                            <a href="https://wa.me/+5491122923987/">+54 9 11-2292-3987 - [Enviar]</a>
+                            <a href="https://wa.me/+5491122923987/">+54 9 11-2292-3987</a>
                         </div>
                         <div class="col-md-3 col-xs-6 md-margin-b-30">
                             <h4>Correo Electrónico</h4>
-                            <a href="mailto:lucashermannit@gmail.com">Lucas Hermann IT - [Enviar]</a>
+                            <a href="mailto:lucashermannit@gmail.com">Lucas Hermann IT</a>
                         </div>
                         <div class="col-md-3 col-xs-6">
                             <h4>Instagram</h4>
-                            <a href="https://www.instagram.com/lucashermannph/">Lucas Hermann PH - [Visitar]</a>
+                            <a href="https://www.instagram.com/lucashermannph/">Lucas Hermann PH</a>
                         </div>
                         <div class="col-md-3 col-xs-6">
                             <h4>Linkedin</h4>
-                            <a href="https://www.linkedin.com/in/lucashermannit/">Lucas Hermann - [Visitar]</a>
+                            <a href="https://www.linkedin.com/in/lucashermannit/">Lucas Hermann</a>
                         </div>
                     </div>
 
