--- a/viajes.html
+++ b/viajes.html
@@ -479,7 +479,7 @@
                                             <div class="card__content">
                                                 <div class="col-lg-6 margin-t-30 margin-b-60">
                                                 <swiper-container class="mySwiper" effect="cards" grab-cursor="true">
-                                                    <swiper-slide><img class="logo-img" src="img/viajes/uruguay/uy.jpg" alt="imagen1" width="105Ñ%"></swiper-slide> <!-- CAMBIAR A entrerios2010-->
+                                                    <swiper-slide><img class="logo-img" src="img/viajes/uruguay/uy.jpg" alt="imagen1" width="105%"></swiper-slide>
                                                 </swiper-container>
                                                 </div>
                                                 <div class="col-lg-6 margin-b-30">
