--- a/club.html
+++ b/club.html
@@ -111,10 +111,12 @@
     </div>
     <!--========== SLIDER ==========-->
         <!-- Formulario -->
-        <div id="galeria">
-            <div class="container content-lg">
+        <div id="formulario">
+            <div class="container text-center">
                 <div class="row">
-                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScCuF0Y-hkWWw_LWHGM-GhPEKcqmlbD9gL809-lgGZdNTxgyw/viewform?embedded=true" width="640" height="1390" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
+                    <div class="col-sm-12">
+                        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScCuF0Y-hkWWw_LWHGM-GhPEKcqmlbD9gL809-lgGZdNTxgyw/viewform?embedded=true" width="480" height="1620" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
+                    </div>
                 </div>
             </div>
         </div>
