Borro comentarios y cambio en CV detalles tecnicos

--- a/cv.html
+++ b/cv.html
@@ -130,12 +130,12 @@
                                 <br>- Diseño, tanto estético como funcional
                                 <br>- Pruebas de calidad y funcionamiento</p>
                                 <p>Tecnologías utilizadas:
-                                <br>- HTML5
-                                <br>- CSS3
+                                <br>- HTML 5
+                                <br>- CSS 3
                                 <br>- JS ES6
                                 <br>- Bootstrap v5.2
                                 <br>- JSON
-                                <br>- jQuery Biblioteca </p>
+                                <br>- jQuery</p>
 
                                 <p>Programas de diseño:
                                 <br>- PS, Adobe Photoshop 2020
