Cambio links de visitas de pagina

--- a/plantilla.html
+++ b/plantilla.html
@@ -57,6 +57,8 @@
                     <div class="collapse navbar-collapse nav-collapse">
                         <div class="menu-container">
                             <ul class="nav navbar-nav navbar-nav-right">
+                                <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#profesionales">Profesionales</a></li>
+                                <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#restaurantes">Restaurantes</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#contact">Contacto</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="/">Más</a></li>
                             </ul>
@@ -169,7 +171,7 @@
         <!-- End Profesionales -->
 
         <!-- Restaurantes -->
-        <div id="profesionales" class="bg-color-white">
+        <div id="restaurantes" class="bg-color-sky-light">
             <div data-auto-height="true">
                 <div class="container content-lg">
                     <div class="row">
@@ -183,13 +185,13 @@
                         <div class="col-md-4 text-center margin-t-50 margin-b-50">
                             <img class="mx-auto d-block" src="img/paginas/pagina4.jpg" alt="imagen1" height="250">
                             <div class="d-grid gap-2 d-md-block margin-t-20">
-                                <a class="btn btn-primary btn-lg" href="https://lucashermannit.github.io/restaurante2/" role="button">Visitar</a>
+                                <a class="btn btn-primary btn-lg" href="https://lucashermannit.github.io/restaurante2/#about" role="button">Visitar</a>
                             </div>
                         </div>
                         <div class="col-md-4 text-center margin-t-50 margin-b-50">
                             <img class="mx-auto d-block" src="img/paginas/pagina5.jpg" alt="imagen1" height="250">
                             <div class="d-grid gap-2 d-md-block margin-t-20">
-                                <a class="btn btn-primary btn-lg" href="https://lucashermannit.github.io/restaurante3/" role="button">Visitar</a>
+                                <a class="btn btn-primary btn-lg" href="https://lucashermannit.github.io/restaurante3/#image" role="button">Visitar</a>
                             </div>
                         </div>
                     </div>
@@ -197,7 +199,7 @@
                         <div class="col-md-4 text-center margin-t-50 margin-b-50">
                             <img class="mx-auto d-block" src="img/paginas/pagina6.jpg" alt="imagen1" height="300">
                             <div class="d-grid gap-2 d-md-block margin-t-20">
-                                <a class="btn btn-primary btn-lg" href="https://lucashermannit.github.io/restaurante4/" role="button">Visitar</a>
+                                <a class="btn btn-primary btn-lg" href="https://lucashermannit.github.io/restaurante4/#menu" role="button">Visitar</a>
                             </div>
                         </div>
                     </div>
@@ -207,68 +209,11 @@
         <!-- End Restaurantes -->
 
 
-
-
-        <!-- Experience
-        <div id="experience">
-            <div class="bg-white" data-auto-height="true">
-                <div class="container content-lg">
-                    <div class="row row-space-2 margin-b-4">
-                       <h2>Educación</h2>                        
-
-                        <div class="margin-b-50">
-                            <div class="progress-box">
-                                <h3>Licenciatura en Análisis de Sistemas - UBA<span class="color-heading pull-right">mar. 2018 - actualidad</span></h3>
-                                <div class="progress">
-                                    <div class="progress-bar bg-color-base" role="progressbar" data-width="50"></div>
-                                </div>
-                                <p>Desarrollo en:
-                                <br>- C
-                                <br>- C++ 
-                                <br>- Python </p>
-                            </div>
-                        </div>
-
-                        <div class="margin-b-50">
-                            <div class="progress-box">
-                                <h3>Ingeniería Electrónica - UBA<span class="color-heading pull-right">mar. 2013 - dic. 2017</span></h3>
-                                <div class="progress">
-                                    <div class="progress-bar bg-color-base" role="progressbar" data-width="35"></div>
-                                </div>
-                                <p>Estudio circuitos electrónicos digitales</p>
-
-                                <p>Desarrollo en:
-                                <br>- C
-                                <br>- C++ </p>
-                            </div>
-                        </div>
-
-                        <div class="margin-b-50">
-                            <div class="progress-box">
-                                <h3>Técnico Electrónico - Escuela Técnica Otto Krause <span class="color-heading pull-right">mar. 2007 - dic. 2012</span></h3>
-                                <div class="progress">
-                                    <div class="progress-bar bg-color-base" role="progressbar" data-width="100"></div>
-                                </div>
-                                <p>Prototipado, fabricación y puesta en marcha de circuitos electrónicos, analógicos y digitales</p>
-                                <p>Estudio microprocesadores familia Intel</p>
-                                <p>Desarrollo en:
-                                <br>- C
-                                <br>- C++ 
-                                <br>- ASM para microcontroladores Motorola</p>
-                            </div>
-                        </div>
-                                                
-                    </div>
-                </div>
-            </div>
-        </div>
-        End Experience -->
-
         <!-- ACA -->
         <!-- Contacto -->
         <div id="contact">
-            <!-- <div class="bg-color-sky-light"> --> 
-            <div class="bg-color-sky-light">
+            
+            <div class="bg-color-white">
                 <div class="container content-lg">
                     <div class="row margin-b-40">
                         <div class="col-sm-6">
