--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#body">Inicio</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#about">Sobre mi</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#contact">Contacto</a></li>
-                                <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="/ph">Fotografía</a></li>
+                                <!--<li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="/ph">Fotografía</a></li>-->
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="/club">Club</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="/libros">Libros</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="/cv">CV</a></li>
